<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainMenu</class>
 <widget class="QMainWindow" name="MainMenu">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1000</width>
    <height>1000</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QPushButton" name="SoloButton">
    <property name="geometry">
     <rect>
      <x>400</x>
      <y>450</y>
      <width>200</width>
      <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
        background-color: lightgray;
        font-family: Verdana;
        font-size: 24px;
        border-radius: 20px;
        min-width: 200px; /* Set the minimum width */
        min-height: 50px; /* Set the minimum height */
		position: absolute;
   		 left: 100px;
   		 top: 200px;
    }

    QPushButton:hover {
        background-color: rgb(203, 255, 255);
}</string>
    </property>
    <property name="text">
     <string>Local</string>
    </property>
   </widget>
   <widget class="QPushButton" name="BackButton">
    <property name="geometry">
     <rect>
      <x>400</x>
      <y>600</y>
      <width>200</width>
      <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
        background-color: lightgray;
        font-family: Verdana;
        font-size: 24px;
        border-radius: 20px;
        min-width: 200px; /* Set the minimum width */
        min-height: 50px; /* Set the minimum height */
		position: absolute;
   		 left: 100px;
   		 top: 200px;
    }

    QPushButton:hover {
        background-color: rgb(203, 255, 255);
}</string>
    </property>
    <property name="text">
     <string>Back</string>
    </property>
   </widget>
   <widget class="QLabel" name="coolHeader">
    <property name="geometry">
     <rect>
      <x>443</x>
      <y>100</y>
      <width>301</width>
      <height>131</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Verdana</family>
      <pointsize>36</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">Qlabel#coolHeader {
    font-size: 24px;
    font-family: &quot;Arial&quot;;
    font-weight: bold;
    color: #3366FF;
    background-color: #F0F0F0;
    padding: 10px;
    border-radius: 5px;
}
</string>
    </property>
    <property name="text">
     <string>Play</string>
    </property>
   </widget>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
